# archgraph-mcp

./: .aiignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  railway.json
.github/workflows/: release.yml  test.yml
docs/: local-build-and-semantic.md  release-cycle.md  setup-and-mcp.md
sample_repo/src/: main.ts  utils.ts
src/archgraph_mcp/: __init__.py  __main__.py  enums.py  logging_config.py  models.py
src/archgraph_mcp/graph/: builder.py  query_engine.py
src/archgraph_mcp/parser/: base.py  java.py  kotlin.py  typescript.py
src/archgraph_mcp/semantic/: build.py  embeddings.py  vector_index.py
src/archgraph_mcp/server/: mcp_server.py
src/archgraph_mcp/storage/: kuzu_store.py
src/archgraph_mcp/utils/: scanner.py
tests/: test_embeddings.py  test_graph_builder.py  test_graph_ui.py  test_kuzu_store.py  test_mcp_server.py  test_parser.py  test_query_engine.py  test_scanner.py
