[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archgraph-mcp"
version = "0.1.0"
description = "MCP server that builds a knowledge graph of a software codebase"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "networkx>=3.6.1",
    "mcp>=1.28.1,<2.0",
    "uvicorn>=0.51.0",
    "starlette>=1.3.1",
    "tree-sitter>=0.26.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-kotlin>=1.1.0",
    "kuzu>=0.11.3",
]

[project.optional-dependencies]
semantic = [
    "numpy>=2.5.1",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
    "types-networkx>=3.6.1.20260624",
    "mdformat>=1.0",
    "mdformat-gfm>=1.0",
]

[project.scripts]
archgraph-mcp = "archgraph_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["archgraph_mcp"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["archgraph_mcp"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_typescript.*",
    "tree_sitter_java.*",
    "tree_sitter_kotlin.*",
    "kuzu.*",
    "numpy.*",
]
ignore_missing_imports = true
